<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/app_background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="vertical">
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.09"
    android:weightSum="1"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:weightSum="1"
        
        android:orientation="horizontal" >
        
            
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            
            
             >
        
        <LinearLayout 
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/leftround_blue"
            
            >

            <TextView
                android:id="@+id/textView_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:text="@string/language_english"
                android:textSize="@dimen/textsize" />

        </LinearLayout>
        
        </RelativeLayout>
        
        
        <LinearLayout 
            android:id="@+id/norwgian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:background="@drawable/rightround_white"
            >

            <TextView
                android:id="@+id/textView_nowrgian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_norwgian"
                android:textColor="@color/app_theam_color"
               android:textSize="@dimen/textsize"/>

        </LinearLayout>
        
        

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    </LinearLayout>
    

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:orientation="vertical">
    </LinearLayout>
    
    <!-- kkjvkjv -->
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.09"
    android:weightSum="1"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.10"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:weightSum="1"
       
        android:orientation="horizontal" >
        
        
          <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:background="@drawable/leftround_white"
            >

              <TextView
                  android:id="@+id/textView3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/notification"
                  android:textColor="@color/app_theam_color"
                  android:textSize="@dimen/textsize" />

          </LinearLayout>
        
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:background="@drawable/rightround_white"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                 />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    </LinearLayout>
    
   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:orientation="vertical">
    </LinearLayout>
    
   
      <!-- kkjvkjv -->
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.09"
    android:weightSum="1"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/aboutus"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:weightSum="1"
        
        android:orientation="horizontal" >
        
        
        
          <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:background="@drawable/leftround_blue"
            >

              <ImageView
                  android:id="@+id/imageView1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:src="@drawable/aboutus_icon" />

          </LinearLayout>
        
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:background="@drawable/rightround_white"
            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus"
                android:textColor="@color/app_theam_color"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:orientation="vertical">
    </LinearLayout>
    
      <!-- kkjvkjv -->
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.09"
    android:weightSum="1"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:weightSum="1"
        
        android:orientation="horizontal" >
        
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:background="@drawable/leftround_blue"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon" />

        </LinearLayout>
        
        
        
        <LinearLayout 
            android:id="@+id/change_pincode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:background="@drawable/rightround_white"
            >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pincode"
                android:textColor="@color/app_theam_color"
                android:textSize="@dimen/textsize" />

        </LinearLayout>
        
        </LinearLayout>
       
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </LinearLayout>
    </LinearLayout>
    
   </LinearLayout>

